kube/deployment.old.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: "simple-flask-1"
  namespace: "simple-flask-1"
  labels:
    purpose: "just_playing_around"
spec:
  containers:
  - name: simple-flask-1
    image: "@@@IMAGE@@@"
