kube/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: simple-flask-1
  namespace: simple-flask-1
spec:
  # A deployment's specification really only 
  # has a few useful options
  
  # 1. How many copies of each pod do we want?
  replicas: 3

  # 3. Which pods are managed by this deployment?
  selector:
    # This must match the labels we set on the pod!
    matchLabels:
      app: simple-flask-1
  
  # This template field is a regular pod configuration 
  # nested inside the deployment spec
  template:
    metadata:
      # Set labels on the pod.
      # This is used in the deployment selector.
      labels:
        app: simple-flask-1
    spec:
      containers:
        - name: simple-flask-1
          image: "@@@IMAGE@@@"
          ports:
          - containerPort: 5000
