kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-flask-1
  namespace: "simple-flask-1"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
  labels:
    app: simple-flask-1
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "simple-flask-1"
              servicePort: 5000
